[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kiro-usage"
version = "0.1.1"
description = "Track token usage and costs across Kiro CLI sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = [
    "kiro",
    "kiro-cli",
    "kiro-usage",
    "token-usage",
    "token-tracker",
    "ai-cost",
    "llm-cost",
    "claude",
    "anthropic",
    "usage-monitor",
    "terminal-dashboard",
    "rich",
    "developer-tools",
]
classifiers = [
    "Environment :: Console",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

[project.scripts]
kiro-usage = "kiro_usage.viewer:main"
kiro-usage-archiver = "kiro_usage.archiver:main"

[tool.setuptools.packages.find]
include = ["kiro_usage*"]
